--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+    <script src="script.js"></script>
     <title>Document</title>
 </head>
 
@@ -129,34 +130,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
         integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
         crossorigin="anonymous"></script>
-    <script>
-        function changePlayer(source, name, description,subdescription) {
-            document.getElementById('audio-player').src = source + '.mp3';
-            document.getElementById('player-name').textContent = name;
-            document.getElementById('player-description').textContent = description;
-            document.getElementById('subdescription').textContent=subdescription;
-        }
-
-        function toggleDescription() {
-            var description = document.querySelector('.description');
-            var toggleButton = document.getElementById('toggle-description');
-            var hideDescription=document.getElementById('hide-description');
-            if (description.style.display === 'none' || description.style.display === '') {
-                description.style.display = 'block';
-                toggleButton.style.display = 'none';
-                hideDescription.style.display='block'; // Hide the toggle button
-            }
-        }
-
-        function hideDescription() {
-            var description = document.querySelector('.description');
-            var toggleButton = document.getElementById('toggle-description');
-            var hideDescription=document.getElementById('hide-description');
-            description.style.display = 'none';
-            hideDescription.style.display='none';
-            toggleButton.style.display = 'block'; // Show the toggle button
-        }
-    </script>
+ 
 </body>
 
 </html>
