--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div class=" audio-player-container ">
                 <div class="audio-player-card">
                     <div class="first-section-card">
-                    <h2 id="player-name">Welcome Wall</h2>
+                    <h2 id="player-name" tabindex="-1">Welcome Wall</h2>
                     
     
                     <audio id="audio-player" controls style="background-color: transparent; width: 100%;">
