--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
                     <div class="audio-players-list">
                         <ol>
                             <li> <button onclick="changePlayer('audioFiles/sample-3s', '1. Welcome Wall', 'description','Look Again: European Paintings 1300–1800')" >1. Welcome Wall</button></li>
-                            <li><button onclick="changePlayer('audioFiles/sample-6s', '1A. Experience Introduction', 'description','Fra Filippo Lippi, 1440')" ondblclick="focusAudioPlayer()">1A. Experience Introduction</button></li>
-                            <li><button onclick="changePlayer('audioFiles/sample-6s', '2A. First Notes – Panel Description', 'description','Fra Filippo Lippi, 1440')" ondblclick="focusAudioPlayer()">2A. First Notes – Panel Description</button></li>
-                            <li> <button onclick="changePlayer('audioFiles/sample-6s', '2B. First Notes – Experience Description', 'description','Fra Filippo Lippi, 1440')" ondblclick="focusAudioPlayer()">2B. First Notes – Experience Description</button></li>
+                            <li><button onclick="changePlayer('audioFiles/sample-6s', '1A. Experience Introduction', 'description','Fra Filippo Lippi, 1440')" >1A. Experience Introduction</button></li>
+                            <li><button onclick="changePlayer('audioFiles/sample-6s', '2A. First Notes – Panel Description', 'description','Fra Filippo Lippi, 1440')" >2A. First Notes – Panel Description</button></li>
+                            <li> <button onclick="changePlayer('audioFiles/sample-6s', '2B. First Notes – Experience Description', 'description','Fra Filippo Lippi, 1440')" >2B. First Notes – Experience Description</button></li>
                        <li><button onclick="changePlayer('audioFiles/sample-6s', '2C. First Notes – Welcome Video', 'description','Fra Filippo Lippi, 1440')">2C. First Notes – Welcome Video</button></li>
 
                        <li><button onclick="changePlayer('audioFiles/sample-6s', '3A. Heartbeats – Panel Description', 'description','Fra Filippo Lippi, 1440')">3A. Heartbeats – Panel Description</button></li>
@@ -103,7 +103,7 @@
                 </div>
             </div>
             <div class="img-right " >
-                <img src="images/Heartsprings.png" alt="UNICEF USA - HEARTSTRINGS AUDIO GUIDE" class="img-fluid">
+                <img src="images/Heartsprings.png" alt="HEARTSTRING CREATING CONNECTION TO THE WORLDS CHILDERN" class="img-fluid">
             </div>
         
         </div>
@@ -123,15 +123,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
         integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
         crossorigin="anonymous"></script>
-        <script>
-            function focusAudioPlayer() {
-                document.getElementById('audio-player').focus();
-                document.getElementById('audio-player').addEventListener('focus', function() {
-        this.play();
-    });
-                        }
 
-        </script>
 </body>
 
 </html>
