--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </nav>
     <section>
         <div class="container ">
-            <h1>Audio Guide</h1>
+            <h1>Audio Guide v1.1</h1>
         </div>
 
         <!-- Audio Player Starts -->
