done with feedback for unicef

--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
     <!-- NavBar  Start-->
     <nav class="navbar ">
         <div class="container">
-            <a class="navbar-brand" href="#">
-                <img src="images/UUSA_wordmark_W.png"  width="180" height="80">
-            </a>
+            <span class="navbar-brand" href="">
+                <img src="images/UUSA_wordmark_W.png"  width="180" height="80" alt="Unicef USA">
+            </span>
         </div>
     </nav>
     <section>
         <div class="container ">
-            <h1>Audio Guide v1.1</h1>
+            <h1>Audio Guide v1.2</h1>
         </div>
 
         <!-- Audio Player Starts -->
@@ -103,7 +103,7 @@
                 </div>
             </div>
             <div class="img-right " >
-                <img src="images/Heartsprings.png" alt="HEARTSTRING CREATING CONNECTION TO THE WORLDS CHILDERN" class="img-fluid">
+                <img src="images/Heartsprings.png" alt="HEARTSTRINGS CREATING CONNECTION TO THE WORLDS CHILDREN" class="img-fluid">
             </div>
         
         </div>
