--- a/index.html
+++ b/index.html
@@ -60,40 +60,39 @@
                         <h2 >Playlist</h2>
                     <div class="audio-players-list">
                         <ol>
-                            <li> <button onclick="changePlayer('audioFiles/sample-3s', '1. Welcome Wall', 'description','Look Again: European Paintings 1300–1800')" >1. Welcome Wall</button></li>
-                            <li><button onclick="changePlayer('audioFiles/sample-6s', '1A. Experience Introduction', 'description','Fra Filippo Lippi, 1440')" >1A. Experience Introduction</button></li>
-                            <li><button onclick="changePlayer('audioFiles/sample-6s', '2A. First Notes – Panel Description', 'description','Fra Filippo Lippi, 1440')" >2A. First Notes – Panel Description</button></li>
-                            <li> <button onclick="changePlayer('audioFiles/sample-6s', '2B. First Notes – Experience Description', 'description','Fra Filippo Lippi, 1440')" >2B. First Notes – Experience Description</button></li>
-                       <li><button onclick="changePlayer('audioFiles/sample-6s', '2C. First Notes – Welcome Video', 'description','Fra Filippo Lippi, 1440')">2C. First Notes – Welcome Video</button></li>
+                            <li> <button onclick="changePlayer('audioFiles/sample-3s', 'Welcome Wall', 'description','Look Again: European Paintings 1300–1800')" >Welcome Wall</button></li>
+                            <li><button onclick="changePlayer('audioFiles/sample-6s', 'Welcome Experience and Zone Panel Introduction', 'description','Fra Filippo Lippi, 1440')" >Welcome Experience and Zone Panel Introduction</button></li>
+                            <li><button onclick="changePlayer('audioFiles/sample-6s', 'First Notes Introduction', 'description','Fra Filippo Lippi, 1440')" >First Notes Introduction</button></li>
+                            <li> <button onclick="changePlayer('audioFiles/sample-6s', 'Welcome Video', 'description','Fra Filippo Lippi, 1440')" >Welcome Video</button></li>
+                       <li><button onclick="changePlayer('audioFiles/sample-6s', 'Heartbeats Zone Panel', 'description','Fra Filippo Lippi, 1440')">Heartbeats Zone Panel</button></li>
 
-                       <li><button onclick="changePlayer('audioFiles/sample-6s', '3A. Heartbeats – Panel Description', 'description','Fra Filippo Lippi, 1440')">3A. Heartbeats – Panel Description</button></li>
-                       <li> <button onclick="changePlayer('audioFiles/sample-6s', '3B. Heartbeats – Experience Description', 'description','Fra Filippo Lippi, 1440')">3B. Heartbeats – Experience Description</button></li>
-                       <li><button onclick="changePlayer('audioFiles/sample-6s', '3C. Heartbeats – Interactive Experience', 'description','Fra Filippo Lippi, 1440')">3C. Heartbeats – Interactive Experience</button></li>
-                       <li> <button onclick="changePlayer('audioFiles/sample-6s', '4A. Living Lyrics – Panel Description', 'description','Fra Filippo Lippi, 1440')">4A. Living Lyrics – Panel Description</button></li>
+                       <li><button onclick="changePlayer('audioFiles/sample-6s', 'Heartbeats Interactive Experience', 'description','Fra Filippo Lippi, 1440')">Heartbeats Interactive Experience</button></li>
+                       <li> <button onclick="changePlayer('audioFiles/sample-6s', 'Heartbeats Lightboxes', 'description','Fra Filippo Lippi, 1440')">Heartbeats Lightboxes</button></li>
+                       <li><button onclick="changePlayer('audioFiles/sample-6s', 'Living Lyrics Zone Panel', 'description','Fra Filippo Lippi, 1440')">Living Lyrics Zone Panel</button></li>
+                       <li> <button onclick="changePlayer('audioFiles/sample-6s', 'Living Lyrics Lightboxes - revisit', 'description','Fra Filippo Lippi, 1440')">Living Lyrics Lightboxes - revisit</button></li>
 
-                       <li>  <button onclick="changePlayer('audioFiles/sample-6s', '4B. Living Lyrics – Experience Description', 'description','Fra Filippo Lippi, 1440')">4B. Living Lyrics – Experience Description</button></li>
-                       <li><button onclick="changePlayer('audioFiles/sample-6s', '4C. Living Lyrics – Interactive Experience', 'description','Fra Filippo Lippi, 1440')">4C. Living Lyrics – Interactive Experience</button></li>
-                       <li><button onclick="changePlayer('audioFiles/sample-6s', '5A. Voices of Power – Panel Description', 'description','Fra Filippo Lippi, 1440')">5A. Voices of Power – Panel Description</button></li>
-                       <li><button onclick="changePlayer('audioFiles/sample-6s', '5B. Voices of Power – Experience Description', 'description','Fra Filippo Lippi, 1440')">5B. Voices of Power – Experience Description</button></li>
-                       <li><button onclick="changePlayer('audioFiles/sample-6s', '5C. Voices of Power – Interactive Experience', 'description','Fra Filippo Lippi, 1440')">5C. Voices of Power – Interactive Experience</button></li>
+                       <li>  <button onclick="changePlayer('audioFiles/sample-6s', 'Living Lyrics Interactive Experience', 'description','Fra Filippo Lippi, 1440')">Living Lyrics Interactive Experience</button></li>
+                       <li><button onclick="changePlayer('audioFiles/sample-6s', 'Voices of Power Zone Panel', 'description','Fra Filippo Lippi, 1440')">Voices of Power Zone Panel</button></li>
+                       <li><button onclick="changePlayer('audioFiles/sample-6s', 'Voices of Power Interactive Experience', 'description','Fra Filippo Lippi, 1440')">Voices of Power Interactive Experience</button></li>
+                       <li><button onclick="changePlayer('audioFiles/sample-6s', 'Voices of Power Lightboxes', 'description','Fra Filippo Lippi, 1440')">Voices of Power Lightboxes</button></li>
+                       <li><button onclick="changePlayer('audioFiles/sample-6s', 'Our Song Zone Panel', 'description','Fra Filippo Lippi, 1440')">Our Song Zone Panel</button></li>
                        <li>
-                        <button onclick="changePlayer('audioFiles/sample-6s', '6A. Our Song – Panel Description', 'description','Fra Filippo Lippi, 1440')">6A. Our Song – Panel Description</button>
+                        <button onclick="changePlayer('audioFiles/sample-6s', 'Our Song Interactive Experience', 'description','Fra Filippo Lippi, 1440')">Our Song Interactive Experience</button>
                     </li>
                     <li>
-                        <button onclick="changePlayer('audioFiles/sample-6s', '6B. Our Song – Experience/Interact', 'description','Fra Filippo Lippi, 1440')">6B. Our Song – Experience/Interactive Description</button>
+                        <button onclick="changePlayer('audioFiles/sample-6s', 'Harmony Hall Introduction', 'description','Fra Filippo Lippi, 1440')">Harmony Hall Introduction
+                        </button>
                     </li>
                     <li>
-                        <button onclick="changePlayer('audioFiles/sample-6s', '7A. Harmony Hall – Panel Description', 'description','Fra Filippo Lippi, 1440')">7A. Harmony Hall – Panel Description</button>
+                        <button onclick="changePlayer('audioFiles/sample-6s', 'Take Action Introduction', 'description','Fra Filippo Lippi, 1440')">Take Action Introduction</button>
                     </li>
                     <li>
-                        <button onclick="changePlayer('audioFiles/sample-6s', '7B. Harmony Hall – Experience Description', 'description','Fra Filippo Lippi, 1440')">7B. Harmony Hall – Experience Description</button>
+                        <button onclick="changePlayer('audioFiles/sample-6s', 'Photo wall and kid’s section', 'description','Fra Filippo Lippi, 1440')">Photo wall and kid’s section</button>
                     </li>
                     <li>
-                        <button onclick="changePlayer('audioFiles/sample-6s', '8A. Take Action – Experience Description', 'description','Fra Filippo Lippi, 1440')">8A. Take Action – Experience Description</button>
+                        <button onclick="changePlayer('audioFiles/sample-6s', 'City Specific Alternate Descriptions', 'description','Fra Filippo Lippi, 1440')">City Specific Alternate Descriptions</button>
                     </li>
-                    <li>
-                        <button onclick="changePlayer('audioFiles/sample-6s', '8B. Take Action – Ending Sequence and', 'description','Fra Filippo Lippi, 1440')">8B. Take Action – Ending Sequence and</button>
-                    </li>
+
                        
                         </ol>
             
