--- a/index.html
+++ b/index.html
@@ -62,25 +62,25 @@
                         <ol>
                             <li> <button onclick="changePlayer('audioFiles/sample-3s', 'Welcome Wall', 'description','Look Again: European Paintings 1300–1800')" >Welcome Wall</button></li>
                             <li><button onclick="changePlayer('audioFiles/sample-6s', 'Welcome Experience and Zone Panel Introduction', 'description','Fra Filippo Lippi, 1440')" >Welcome Experience and Zone Panel Introduction</button></li>
-                            <li><button onclick="changePlayer('audioFiles/sample-6s', 'First Notes Introduction', 'description','Fra Filippo Lippi, 1440')" >First Notes Introduction</button></li>
+                            <li><button onclick="changePlayer('audioFiles/First Notes Introduction', 'First Notes Introduction', 'description','Fra Filippo Lippi, 1440')" >First Notes Introduction</button></li>
                             <li> <button onclick="changePlayer('audioFiles/sample-6s', 'Welcome Video', 'description','Fra Filippo Lippi, 1440')" >Welcome Video</button></li>
-                       <li><button onclick="changePlayer('audioFiles/sample-6s', 'Heartbeats Zone Panel', 'description','Fra Filippo Lippi, 1440')">Heartbeats Zone Panel</button></li>
+                       <li><button onclick="changePlayer('audioFiles/Heartbeats Zone Panel', 'Heartbeats Zone Panel', 'description','Fra Filippo Lippi, 1440')">Heartbeats Zone Panel</button></li>
 
                        <li><button onclick="changePlayer('audioFiles/sample-6s', 'Heartbeats Interactive Experience', 'description','Fra Filippo Lippi, 1440')">Heartbeats Interactive Experience</button></li>
-                       <li> <button onclick="changePlayer('audioFiles/sample-6s', 'Heartbeats Lightboxes', 'description','Fra Filippo Lippi, 1440')">Heartbeats Lightboxes</button></li>
-                       <li><button onclick="changePlayer('audioFiles/sample-6s', 'Living Lyrics Zone Panel', 'description','Fra Filippo Lippi, 1440')">Living Lyrics Zone Panel</button></li>
+                       <li> <button onclick="changePlayer('audioFiles/Heartbeats Lightboxes', 'Heartbeats Lightboxes', 'description','Fra Filippo Lippi, 1440')">Heartbeats Lightboxes</button></li>
+                       <li><button onclick="changePlayer('audioFiles/Living Lyrics Zone Panel', 'Living Lyrics Zone Panel', 'description','Fra Filippo Lippi, 1440')">Living Lyrics Zone Panel</button></li>
                        <li> <button onclick="changePlayer('audioFiles/sample-6s', 'Living Lyrics Lightboxes - revisit', 'description','Fra Filippo Lippi, 1440')">Living Lyrics Lightboxes - revisit</button></li>
 
                        <li>  <button onclick="changePlayer('audioFiles/sample-6s', 'Living Lyrics Interactive Experience', 'description','Fra Filippo Lippi, 1440')">Living Lyrics Interactive Experience</button></li>
-                       <li><button onclick="changePlayer('audioFiles/sample-6s', 'Voices of Power Zone Panel', 'description','Fra Filippo Lippi, 1440')">Voices of Power Zone Panel</button></li>
+                       <li><button onclick="changePlayer('audioFiles/Voices of Power Zone Panel', 'Voices of Power Zone Panel', 'description','Fra Filippo Lippi, 1440')">Voices of Power Zone Panel</button></li>
                        <li><button onclick="changePlayer('audioFiles/sample-6s', 'Voices of Power Interactive Experience', 'description','Fra Filippo Lippi, 1440')">Voices of Power Interactive Experience</button></li>
-                       <li><button onclick="changePlayer('audioFiles/sample-6s', 'Voices of Power Lightboxes', 'description','Fra Filippo Lippi, 1440')">Voices of Power Lightboxes</button></li>
-                       <li><button onclick="changePlayer('audioFiles/sample-6s', 'Our Song Zone Panel', 'description','Fra Filippo Lippi, 1440')">Our Song Zone Panel</button></li>
+                       <li><button onclick="changePlayer('audioFiles/Voices of Power Lightboxes', 'Voices of Power Lightboxes', 'description','Fra Filippo Lippi, 1440')">Voices of Power Lightboxes</button></li>
+                       <li><button onclick="changePlayer('audioFiles/Our Song Zone Panel', 'Our Song Zone Panel', 'description','Fra Filippo Lippi, 1440')">Our Song Zone Panel</button></li>
                        <li>
                         <button onclick="changePlayer('audioFiles/sample-6s', 'Our Song Interactive Experience', 'description','Fra Filippo Lippi, 1440')">Our Song Interactive Experience</button>
                     </li>
                     <li>
-                        <button onclick="changePlayer('audioFiles/sample-6s', 'Harmony Hall Introduction', 'description','Fra Filippo Lippi, 1440')">Harmony Hall Introduction
+                        <button onclick="changePlayer('audioFiles/Harmony Hall Introduction', 'Harmony Hall Introduction', 'description','Fra Filippo Lippi, 1440')">Harmony Hall Introduction
                         </button>
                     </li>
                     <li>
