--- a/index.html
+++ b/index.html
@@ -24,7 +24,17 @@
     <section>
         <div class="container ">
             <h1>Audio Guide v1.3</h1>
+
+            
+
+
         </div>
+        <div class="container">
+            <a href="https://unicefheartstringsonsite.org/">
+                Visit Harmony Hall website
+            </a>
+        </div>
+
         <!-- <div class="container" style="margin-block:30px ;">
         <video width="640" height="360" controls>
             <source src="audioFiles/UNICEF_Welcome_Video_En_AD_Mix_30fps_48k24b.mov" type="video/quicktime">
