--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
         </div>
         <div class="container">
-            <a href="https://unicefheartstringsonsite.org/">
+            <a href="https://unicefheartstringsonsite.org/" style="margin-left: 10px;">
                 Visit Harmony Hall website
             </a>
         </div>
