--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </nav>
     <section>
         <div class="container  audio-player">
-            <h1>Audio Guide v1.3</h1>
+            <h1>Audio Guide </h1>
 
         </div>
 
@@ -77,7 +77,7 @@
                        <li><button onclick="changePlayer('audioFiles/Heartbeats Interactive Experience', 'Heartbeats Interactive Experience')">Heartbeats Interactive Experience</button></li>
                        <li> <button onclick="changePlayer('audioFiles/Heartbeats Lightboxes', 'Heartbeats Lightboxes')">Heartbeats Lightboxes</button></li>
                        <li><button onclick="changePlayer('audioFiles/Living Lyrics Zone Panel', 'Living Lyrics Zone Panel')">Living Lyrics Zone Panel</button></li>
-                       <li> <button onclick="changePlayer('audioFiles/Living Lyrics Lightboxes', 'Living Lyrics Lightboxes - revisit')">Living Lyrics Lightboxes - revisit</button></li>
+                       <li> <button onclick="changePlayer('audioFiles/Living Lyrics Lightboxes', 'Living Lyrics Lightboxes - revisit')">Living Lyrics Lightboxes </button></li>
 
                        <li>  <button onclick="changePlayer('audioFiles/Living Lyrics Interactive Experience', 'Living Lyrics Interactive Experience')">Living Lyrics Interactive Experience</button></li>
                        <li><button onclick="changePlayer('audioFiles/Voices of Power Zone Panel', 'Voices of Power Zone Panel')">Voices of Power Zone Panel</button></li>
@@ -97,9 +97,9 @@
                     <li>
                         <button onclick="changePlayer('audioFiles/Photo Wall and Kids Section', 'Photo wall and kid’s section')">Photo wall and kid’s section</button>
                     </li>
-                    <li>
+                    <!-- <li>
                         <button onclick="changePlayer('audioFiles/City Specific Alternate Descriptions', 'City Specific Alternate Descriptions')">City Specific Alternate Descriptions</button>
-                    </li>
+                    </li> -->
 
                        
                         </ul>
