--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                        <li><button onclick="changePlayer('audioFiles/Heartbeats Interactive Experience', 'Heartbeats Interactive Experience')">Heartbeats Interactive Experience</button></li>
                        <li> <button onclick="changePlayer('audioFiles/Heartbeats Lightboxes', 'Heartbeats Lightboxes')">Heartbeats Lightboxes</button></li>
                        <li><button onclick="changePlayer('audioFiles/Living Lyrics Zone Panel', 'Living Lyrics Zone Panel')">Living Lyrics Zone Panel</button></li>
-                       <li> <button onclick="changePlayer('audioFiles/Living Lyrics Lightboxes', 'Living Lyrics Lightboxes - revisit')">Living Lyrics Lightboxes </button></li>
+                       <li> <button onclick="changePlayer('audioFiles/Living Lyrics Lightboxes', 'Living Lyrics Lightboxes ')">Living Lyrics Lightboxes </button></li>
 
                        <li>  <button onclick="changePlayer('audioFiles/Living Lyrics Interactive Experience', 'Living Lyrics Interactive Experience')">Living Lyrics Interactive Experience</button></li>
                        <li><button onclick="changePlayer('audioFiles/Voices of Power Zone Panel', 'Voices of Power Zone Panel')">Voices of Power Zone Panel</button></li>
